--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,14 +4,21 @@ title: Home Page
 script: main
 ---
 
-<section class="hero">
+<section class="hero" data-color="white">
   <div class="container">
     <div class="row">
-      <div class="col-xl-5 offset-xl-2">
+      <div class="col-md-1 d-none d-md-block">
+        <div class="hero__mouse">
+          <button class="btn-reset anim-mouse hero__anim-mouse" type="button" data-ancor="#help">
+            <div class="anim-mouse__point"></div>
+          </button>
+        </div>
+      </div>
+      <div class="col-xl-5 col-lg-5 col-md-10 offset-xl-1">
         <h1 class="title-h1 hero__title">
           <span>Эффективное</span>
           продвижение
-          сайтов в ТОП
+          сайтов в&nbsp;ТОП
           <span>В Москве</span>
         </h1>
         <p class="hero__subtitle">Узнайте стоимость поисковой оптимизации
@@ -21,7 +28,7 @@ script: main
           <button class="btn-reset btn hero__btn" type="submit">Узнать стоимость</button>
         </form>
       </div>
-      <div class="col-xl-3">
+      <div class="col-xl-4 col-lg-5 col-md-10 offset-lg-0 offset-md-1">
         <ul class="hero__list">
           <li class="hero__item">
             <svg>
@@ -55,10 +62,10 @@ script: main
   </div>
 </section>
 
-<section class="help">
+<section class="help" data-color="black" id="help">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
         <h2 class="title-h2 help__title">Мы поможем вам</h2>
         <p class="subtitle help__subtitle">Наше интернет-агентство поможет увеличить продажи и развить ваш бизнес в
           Москве</p>
@@ -70,10 +77,10 @@ script: main
   </div>
 </section>
 
-<section class="service">
+<section class="service" data-color="white">>
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
         <ul class="service__list">
           <li class="service__item">
             <a href="" class="service__link"><span><span>SEO оптимизация интернет-магазинов</span></span></a>
@@ -138,10 +145,10 @@ script: main
   </div>
 </section>
 
-<section class="principle">
+<section class="principle" data-color="black">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2 principle__wrapper">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1 principle__wrapper">
         <h2 class="title-h2 principle__title">Принципы работы</h2>
         <p class="subtitle principle__subtitle">Важность SEO по-прежнему недооценена. Поисковики каждый день отдают
           миллионы
@@ -210,26 +217,24 @@ script: main
   </div>
 </section>
 
-<section class="case">
-  <div class="container">
+<section class="case" data-color="white">
+  <div class="container case__decor">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
         <h2 class="title-h2 case__title">Кейсы</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-2 offset-xl-8">
+      <div class="col-xl-2 offset-xl-8 col-lg-2 col-md-2 offset-md-7 offset-lg-8">
         <button class="btn-reset btn case__btn">Подробнее</button>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
         <p class="subtitle case__subtitle">По seo-оптимизации сайтов в москве и по всей россии</p>
       </div>
     </div>
     <div class="case__wrapper">
       <div class="row">
-        <div class="col-xl-4 offset-xl-2">
+        <div class="col-xl-4 col-md-5 offset-md-1 offset-xl-2">
           <div class="flex flex_h-center">
             <img src="assets/img/case-01.png" alt="" class="case__logo">
             <div class="case__service">
@@ -237,13 +242,13 @@ script: main
             </div>
           </div>
         </div>
-        <div class="col-xl-5">
-          <p class="case__slogan"><span>luminhouse</span>: Как превратить 9 тысяч посетителей в 20 тысяч за три месяца
+        <div class="col-xl-5 col-md-5">
+          <p class="case__slogan"><span>luminhouse</span>: Как превратить 9 тысяч посетителей в 20 тысяч за&nbsp;три&nbsp;месяца
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-4 offset-xl-2">
+        <div class="col-xl-4 col-md-5 offset-md-1 offset-xl-2">
           <p class="case__caption">Задача:</p>
           <ul class="list case__list">
             <li class="list__item">За четыре месяца удвоить посещаемость сайта
@@ -251,7 +256,7 @@ script: main
             </li>
           </ul>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-6 col-md-5">
           <p class="case__caption">Результат:</p>
           <ul class="list case__list">
             <li class="list__item">После трех месяцев работы, на четвертый, сумели
@@ -262,13 +267,13 @@ script: main
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-4 offset-xl-2">
+        <div class="col-xl-4 col-lg-5 offset-xl-2 col-md-10 offset-md-1">
           <div class="graph case__graph">
             <p class="graph__caption">Посещаемость</p>
             <img class="" src="assets/img/graph-img.jpg" alt="">
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-5 col-md-10 offset-lg-0 offset-md-1">
           <table class="table case__table">
             <thead>
             <tr>
@@ -317,12 +322,12 @@ script: main
   </div>
 </section>
 
-<section class="how">
+<section class="how" data-color="black">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
         <h2 class="title-h2 how__title">Как мы продвигаем</h2>
-        <ul class="how__list flex flex_all-sb">
+        <ul class="how__list flex flex_all-sb js-how-slider owl-carousel owl-theme">
           <li class="how__item is-active">
             <svg>
               <use xlink:href="assets/img/sprite.svg#h-icon-01"></use>
@@ -350,13 +355,13 @@ script: main
   </div>
 </section>
 
-<section class="structure">
+<section class="structure" data-color="white">
   <div class="container">
     <div class="row">
-      <div class="col-xl-2 structure__img">
+      <div class="col-md-3 col-xl-2 structure__img">
         <img class="" src="assets/img/structure-bg.png" alt=""/>
       </div>
-      <div class="col-xl-8">
+      <div class="col-xl-8 col-md-9">
         <div class="structure__inner">
           <p class="structure__caption">Разрабатываем подробную
             структуру сайта</p>
@@ -376,25 +381,25 @@ script: main
   </div>
 </section>
 
-<section class="specialize">
-  <div class="container">
+<section class="specialize" data-color="black">
+  <div class="container specialize__decor">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 col-md-10 offset-md-1 offset-xl-2">
         <h2 class="title-h2 specialize__title">Специализация</h2>
       </div>
-      <div class="col-xl-4 offset-xl-2">
+      <div class="col-xl-4 col-md-6 offset-md-1 offset-xl-2">
         <p class="subtitle specialize__subtitle">Высококонкурентные ниши вашего бизнеса,
           на&nbsp;которых мы специализируемся</p>
       </div>
-      <div class="col-xl-2 offset-xl-2">
+      <div class="col-xl-2 col-md-3  offset-lg-1 offset-xl-2">
         <button class="btn-reset btn specialize__btn">перезвонить?</button>
       </div>
-      <div class="col-xl-4 specialize__ellipce">
+      <div class="col-xl-4 col-md-6 specialize__ellipce order-2 order-md-0">
         <div class="specialize__img">
           <button class="specialize__round btn-reset">полный список ниш</button>
         </div>
       </div>
-      <div class="col-xl-3">
+      <div class="col-md-3 col-5 offset-2 offset-md-0 order-0 order-md-0">
         <ul class="specialize__list">
           <li class="specialize__item">
             <svg>
@@ -434,7 +439,7 @@ script: main
           </li>
         </ul>
       </div>
-      <div class="col-xl-4">
+      <div class="col-md-3 col-5 offset-md-0 order-1 order-md-0">
         <ul class="specialize__list specialize__list_second">
           <li class="specialize__item">
             <svg>
@@ -478,12 +483,12 @@ script: main
   </div>
 </section>
 
-<section class="how">
+<section class="how" data-color="black">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
-        <h2 class="title-h2 how__title">Как мы продвигаем</h2>
-        <ul class="how__list flex flex_all-sb">
+      <div class="col-xl-8  offset-xl-2 col-md-10 offset-md-1">
+        <h2 class="title-h2 how__title">Цены на услуги SEO</h2>
+        <ul class="how__list flex flex_all-sb js-price-slider owl-carousel owl-theme">
           <li class="how__item is-active">
             <svg>
               <use xlink:href="assets/img/sprite.svg#h-icon-04"></use>
@@ -508,13 +513,13 @@ script: main
   </div>
 </section>
 
-<section class="structure price">
-  <div class="container">
+<section class="structure price" data-color="white">
+  <div class="container price__decor">
     <div class="row">
-      <div class="col-xl-2 structure__img">
+      <div class="col-md-3 col-xl-2 structure__img">
         <img class="price__img" src="assets/img/price-bg.png" alt=""/>
       </div>
-      <div class="col-xl-8">
+      <div class="col-xl-8 col-md-9">
         <div class="structure__inner">
           <p class="structure__caption">Цена по типу сайтов</p>
           <ul class="price__list">
@@ -549,3 +554,4 @@ script: main
     </div>
   </div>
 </section>
+<div class="js-stop-header"></div>
