--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,7 +81,7 @@ script: main
   <div class="container">
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
-        <ul class="service__list">
+        <ul class="service__list js-service-slider owl-carousel owl-theme">
           <li class="service__item">
             <a href="" class="service__link"><span><span>SEO оптимизация интернет-магазинов</span></span></a>
           </li>
@@ -396,10 +396,15 @@ script: main
       </div>
       <div class="col-xl-4 col-md-6 specialize__ellipce order-2 order-md-0">
         <div class="specialize__img">
-          <button class="specialize__round btn-reset">полный список ниш</button>
+          <button class="specialize__round btn-reset">
+            полный список ниш
+            <span class="specialize__rings"></span>
+            <span class="specialize__rings"></span>
+            <span class="specialize__rings"></span>
+          </button>
         </div>
       </div>
-      <div class="col-md-3 col-5 offset-2 offset-md-0 order-0 order-md-0">
+      <div class="col-md-3 col-6  offset-md-0 order-0 order-md-0 specialize__col">
         <ul class="specialize__list">
           <li class="specialize__item">
             <svg>
@@ -439,7 +444,7 @@ script: main
           </li>
         </ul>
       </div>
-      <div class="col-md-3 col-5 offset-md-0 order-1 order-md-0">
+      <div class="col-md-3 col-6  order-1 order-md-0 specialize__col">
         <ul class="specialize__list specialize__list_second">
           <li class="specialize__item">
             <svg>
