--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-title: Home Page
+title: Seo Page
 script: main
 ---
 
 <section class="hero" data-color="white">
+  {{> canvas}}
   <div class="container">
     <div class="row">
       <div class="col-md-1 d-none d-md-block">
@@ -77,7 +78,9 @@ script: main
   </div>
 </section>
 
-<section class="service" data-color="white">>
+<section class="service" data-color="white">
+  <div id="graph">
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
@@ -218,6 +221,7 @@ script: main
 </section>
 
 <section class="case" data-color="white">
+  {{> canvas}}
   <div class="container case__decor">
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
