fix service animation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -79,8 +79,7 @@ script: main
 </section>
 
 <section class="service" data-color="white">
-  <div id="graph">
-  </div>
+  <div id="graph"></div>
   <div class="container">
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
