--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -208,7 +208,8 @@ script: main
       </div>
     </div>
     <div class="row">
-      <ul class="col-xl-8 offset-xl-2 col-md-10 offset-md-1 themes__list">
+      <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1">
+      <ul class="themes__list js-themes-slider owl-carousel owl-theme">
         <li class="themes__item">
           <img src="assets/img/tm-01.jpg" alt="" class="themes__img">
           <h3 class="title-h3 themes__caption">Светильники</h3>
@@ -336,6 +337,7 @@ script: main
           </div>
         </li>
       </ul>
+      </div>
     </div>
   </div>
 </section>
@@ -521,20 +523,20 @@ script: main
 <section class="team" data-color="black">
   <div class="container team__decor">
     <div class="row">
-      <div class="col-xl-3 offset-xl-2">
+      <div class="col-xl-3 offset-xl-2 offset-md-1 col-md-4">
         <h2 class="title-h2 team__title">Команда</h2>
       </div>
-      <div class="col-xl-4 offset-xl-2">
+      <div class="col-xl-4 offset-xl-2 offset-md-1 col-md-5">
         <button class="team__btn btn-reset btn">Карьера В Digital.tools</button>
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-4 offset-xl-2">
+      <div class="col-xl-4 offset-xl-2  offset-md-1 col-md-10 col-12">
         <p class="subtitle team__subtitle">Мы стремимся к экспертному лидерству в отрасли</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-8 offset-xl-2">
+      <div class="col-xl-8 offset-xl-2 offset-md-1 col-md-10">
         <ul class="team__list owl-carousel owl-theme js-team-slider">
           <li class="team__item"><img src="assets/img/t-01.jpg" alt="" class="team__img">
             <h3 class="title-h3 team__caption">Алексей Волков</h3>
